--- a/app/client/client-import.html
+++ b/app/client/client-import.html
@@ -1,7 +1,7 @@
 <div ng-controller="ClientImportController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Client Import"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Client Import"|translate}}</h4>
         </div>
 
         <div class="panel-body">
