--- a/app/user/admin/work-group-import.html
+++ b/app/user/admin/work-group-import.html
@@ -1,7 +1,7 @@
 <div ng-controller="WorkGroupImportController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Work Group Import / Export"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Work Group Import / Export"|translate}}</h4>
         </div>
 
         <div class="panel-body">
