--- a/app/user/admin/work-groups.html
+++ b/app/user/admin/work-groups.html
@@ -1,6 +1,6 @@
 <div ng-controller="WorkGroupsAdminController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Work Groups'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Work Groups'|translate}}</h4></div>
 
         <div ng-show="loadingTree" class="pull-right" style="padding: 8px">
             <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
@@ -11,22 +11,19 @@
                 <form name="editForm" novalidate ng-submit="search()">
                     <div class="row spacer-bottom">
                         <div class="col-sm-8">
-                            <div class="input-group">
-                                <input class="form-control" ng-model="searchTerm" minlength="2"
-                                       placeholder="{{'Search for login'|translate}}..." tabindex="1" required>
-                                <span class="input-group-btn">
-                                    <button class="btn btn-primary" ng-disabled="editForm.$invalid" type="submit" tabindex="2">
-                                        {{'Search'|translate}}
-                                    </button>
-                                </span>
-                            </div>
+                            <input class="form-control" ng-model="searchTerm" minlength="2" placeholder="{{'Search for login'|translate}}..." tabindex="1" required>
+                        </div>
+                        <div class="col-sm-4">
+                            <button class="cbtn-search" ng-disabled="editForm.$invalid" type="submit" tabindex="2">
+                                <i class="fa fa-search" aria-hidden="true"></i> {{'Search'|translate}}
+                            </button>
                         </div>
                     </div>
                 </form>
 
                 <div class="row" ng-show="result!=null">
                     <div class="col-sm-8">
-                        <table class="table table-bordered table-hover table-responsive">
+                        <table class="table table-striped table-bordered table-hover table-responsive">
                             <thead>
                             <tr>
                                 <th>{{'Work Group'|translate}}</th>
@@ -69,9 +66,9 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row form-group">
                     <div class="col-sm-4">
-                        <button type="button" class="btn btn-success" ng-click="expandAll(expand=!expand)">
+                        <button type="button" class="btn-primary " ng-click="expandAll(expand=!expand)">
                             <span ng-show="!expand">{{'Expand All'|translate}}</span>
                             <span ng-show="expand">{{'Collapse All'|translate}}</span>
                             <span ng-show="!expand" class="glyphicon glyphicon-plus"></span>
@@ -82,12 +79,11 @@
             </div>
 
             <div class="tree-group">
-                <div ng-repeat="workGroup in topWorkGroups|orderBy:['hasChildren','mt4Account']"
+                <div class="tg-inn" ng-repeat="workGroup in topWorkGroups|orderBy:['hasChildren','mt4Account']"
                      ng-include="'workGroupTree'" ng-init="entity=workGroup;level=0">
                 </div>
                 <div class="tree-item">
-                    <button type="button" class="btn btn-success"
-                            ng-click="create()">
+                    <button type="button" class="btn-primary" ng-click="create()">
                         <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
                     </button>
                 </div>
