--- a/app/user/admin/user.html
+++ b/app/user/admin/user.html
@@ -1,17 +1,16 @@
 <div ng-controller="UserAdminController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading" ng-if="user.id">{{user.label}}</strong>
-            <strong class="heading" ng-if="!user.id">{{"New Broker Login"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading" ng-if="user.id">{{user.label}}</h4>
+            <h4 class="heading" ng-if="!user.id">{{"New Broker Login"|translate}}</h4>
         </div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
-                <uib-tabset justified="true">
+                <uib-tabset justified="true" class="sml-tab">
                     <uib-tab heading='{{"Basic"|translate}}'>
                         <p class="spacer"></p>
                         <ng-include src="'app/user/admin/user-basic.html'"></ng-include>
                     </uib-tab>
-
                     <uib-tab heading='{{"Roles"|translate}}'>
                         <p class="spacer"></p>
                         <div class="row">
@@ -33,12 +32,10 @@
                             </div>
                         </div>
                     </uib-tab>
-
                     <uib-tab heading='{{"Work Group Permission"|translate}}' ng-if="workGroups && workGroups.length">
                         <p class="spacer"></p>
                         <ng-include src="'app/user/admin/user-work-group-permission.html'"></ng-include>
                     </uib-tab>
-
                     <uib-tab heading='{{"Login History"|translate}}' ng-show="user.id && userLogs.length">
                         <p class="spacer"></p>
                         <ng-include src="'app/user/admin/user-history.html'"></ng-include>
