--- a/app/user/admin/users.html
+++ b/app/user/admin/users.html
@@ -1,24 +1,18 @@
 <div ng-controller="UsersAdminController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{"Broker Login"|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{"Broker Login"|translate}}</h4></div>
         <div class="panel-body">
-            <div class="row">
+            <div class="row form-group">
                 <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <label for="search">{{"Search"|translate}}</label>
-                        </div>
-                        <div class="col-sm-10">
-                            <input id="search" name="search" ng-model="search" class="form-control" ng-trim="true">
-                        </div>
-                    </div>
+                    <label for="search">{{"Search"|translate}}</label>
+                    <input id="search" name="search" ng-model="search" class="form-control" ng-trim="true">
                 </div>
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-12">
                             <label>{{"Include Archived"|translate}}</label>
                         </div>
-                        <div class="col-sm-8">
+                        <div class="col-sm-12">
                             <div class="btn-group" ng-init="includeArchived=false">
                                 <label class="btn btn-primary" ng-model="includeArchived" uib-btn-radio="true">{{"Yes"|translate}}</label>
                                 <label class="btn btn-primary" ng-model="includeArchived" uib-btn-radio="false">{{"No"|translate}}</label>
