--- a/app/system/password.html
+++ b/app/system/password.html
@@ -1,44 +1,45 @@
 <div ng-controller="CommonPasswordUpdateController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Change Password"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Change Password"|translate}}</h4>
         </div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="update()">
-                <div class="row form-group"
-                     ng-class="{'has-error': editForm.currentPassword.$invalid && editForm.currentPassword.$dirty}">
-                    <div class="col-sm-3">
-                        <label class="control-label" for="currentPassword">{{"Current Password"|translate}}*</label>
+                <div class="spc-frm-bg" style="margin-top: -30px">
+                    <div class="row form-group"
+                         ng-class="{'has-error': editForm.currentPassword.$invalid && editForm.currentPassword.$dirty}">
+                        <div class="col-sm-3">
+                            <label class="control-label" for="currentPassword">{{"Current Password"|translate}}*</label>
+                        </div>
+                        <div class="col-sm-9">
+                            <input id="currentPassword" name="currentPassword" type="password" class="form-control"
+                                   minlength="8" maxlength="20" ng-model="entity.oldPassword" required/>
+                        </div>
                     </div>
-                    <div class="col-sm-5">
-                        <input id="currentPassword" name="currentPassword" type="password" class="form-control"
-                               minlength="8" maxlength="20" ng-model="entity.oldPassword" required/>
+
+                    <div class="row form-group"
+                         ng-class="{'has-error': editForm.newPassword.$invalid && editForm.newPassword.$dirty}">
+                        <div class="col-sm-3">
+                            <label class="control-label" for="newPassword">{{"New Password"|translate}}*</label>
+                        </div>
+                        <div class="col-sm-9">
+                            <input id="newPassword" name="newPassword" type="password" class="form-control" minlength="8"
+                                   maxlength="20" ng-model="entity.newPassword1" required/>
+                            <span class="text-muted">{{'Password must have 8-20 characters.'|translate}}</span>
+                        </div>
+                    </div>
+
+                    <div class="row form-group"
+                         ng-class="{'has-error': editForm.confirmPassword.$invalid && editForm.confirmPassword.$dirty}">
+                        <div class="col-sm-3">
+                            <label class="control-label" for="confirmPassword">{{"Confirm Password"|translate}}*</label>
+                        </div>
+                        <div class="col-sm-9">
+                            <input id="confirmPassword" name="confirmPassword" type="password" class="form-control"
+                                   minlength="8" maxlength="20" ng-model="entity.newPassword2" required/>
+                        </div>
                     </div>
                 </div>
-
-                <div class="row form-group"
-                     ng-class="{'has-error': editForm.newPassword.$invalid && editForm.newPassword.$dirty}">
-                    <div class="col-sm-3">
-                        <label class="control-label" for="newPassword">{{"New Password"|translate}}*</label>
-                    </div>
-                    <div class="col-sm-5">
-                        <input id="newPassword" name="newPassword" type="password" class="form-control" minlength="8"
-                               maxlength="20" ng-model="entity.newPassword1" required/>
-                        <span class="text-muted">{{'Password must have 8-20 characters.'|translate}}</span>
-                    </div>
-                </div>
-
-                <div class="row form-group"
-                     ng-class="{'has-error': editForm.confirmPassword.$invalid && editForm.confirmPassword.$dirty}">
-                    <div class="col-sm-3">
-                        <label class="control-label" for="confirmPassword">{{"Confirm Password"|translate}}*</label>
-                    </div>
-                    <div class="col-sm-5">
-                        <input id="confirmPassword" name="confirmPassword" type="password" class="form-control"
-                               minlength="8" maxlength="20" ng-model="entity.newPassword2" required/>
-                    </div>
-                </div>
-
                 <div class="row text-center">
                     <button type="submit" class="btn btn-primary"
                             ng-disabled="editForm.$invalid || entity.newPassword1!=entity.newPassword2">
