--- a/app/system/messages.html
+++ b/app/system/messages.html
@@ -1,7 +1,7 @@
 <div ng-controller="SystemMessagesCtrl">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Messages"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Messages"|translate}}</h4>
         </div>
         <table class="table table-striped table-hover table-responsive" ng-show="entities && entities.length">
             <thead>
@@ -37,7 +37,7 @@
             </tr>
             </tbody>
         </table>
-        <div class="panel-body text-center" ng-show="!entities.length">
+        <div class="text-center" ng-show="!entities.length">
             {{"You don't have any messages."|translate}}
         </div>
     </div>
