--- a/app/broker/report/fund-transfer-report.html
+++ b/app/broker/report/fund-transfer-report.html
@@ -1,6 +1,6 @@
 <div ng-controller="FundTransferReportController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Fund Transfer Report'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Fund Transfer Report'|translate}}</h4></div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="export()">
@@ -17,8 +17,7 @@
                                            ng-model="searchParams.startDate" is-open="startDate.opened" required
                                            datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default"
-                                                ng-click="startDate.opened=true"><i class="glyphicon glyphicon-calendar"></i>
+                                        <button type="button" class="btn btn-default" ng-click="startDate.opened=true"><img src="../../../images/icon-calender-sml.png" />
                                         </button>
                                     </span>
                                 </p>
@@ -34,11 +33,10 @@
                             <div class="col-sm-12">
                                 <p class="input-group">
                                     <input id="endDate" name="endDate" type="text" class="form-control" uib-datepicker-popup
-                                           ng-model="searchParams.endDate" is-open="endDate.opened" required
-                                           datepicker-options="dateOptions"/>
+                                           ng-model="searchParams.endDate" is-open="endDate.opened" required datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
-                            <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
-                        </span>
+                                        <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
+                                    </span>
                                 </p>
                             </div>
                         </div>
