--- a/app/agent/report/agent-cash-activity-report.html
+++ b/app/agent/report/agent-cash-activity-report.html
@@ -1,6 +1,6 @@
 <div ng-controller="AgentCashActivityController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'IB Cash Activities'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'IB Cash Activities'|translate}}</h4></div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="search()">
@@ -14,11 +14,10 @@
                             <div class="col-sm-12">
                                 <p class="input-group">
                                     <input id="startDate" name="startDate" type="text" class="form-control" uib-datepicker-popup
-                                           ng-model="searchParams.startDate" is-open="startDate.opened" required
-                                           datepicker-options="dateOptions"/>
+                                           ng-model="searchParams.startDate" is-open="startDate.opened" required datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
                                         <button type="button" class="btn btn-default"
-                                                ng-click="startDate.opened=true"><i class="glyphicon glyphicon-calendar"></i>
+                                                ng-click="startDate.opened=true"><img src="../../../images/icon-calender-sml.png" />
                                         </button>
                                     </span>
                                 </p>
@@ -34,10 +33,9 @@
                             <div class="col-sm-12">
                                 <p class="input-group">
                                     <input id="endDate" name="endDate" type="text" class="form-control" uib-datepicker-popup
-                                           ng-model="searchParams.endDate" is-open="endDate.opened" required
-                                           datepicker-options="dateOptions"/>
+                                           ng-model="searchParams.endDate" is-open="endDate.opened" required datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
+                                        <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                                     </span>
                                 </p>
                             </div>
@@ -45,7 +43,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row form-group">
                     <div class="col-sm-12">
                         <button class="btn btn-primary" type="submit" ng-disabled="editForm.$invalid">
                             <i class="fa fa-search" aria-hidden="true"></i> {{'Search'|translate}}
@@ -55,7 +53,7 @@
             </form>
         </div>
 
-        <div class="panel-body row">
+        <div class="panel-body row ">
             <div class="col-sm-12" ng-if="accounts.length && summaryList.length">
                 <table class="table table-bordered table-responsive">
                     <thead>
