--- a/app/broker/management/bulk-payment.html
+++ b/app/broker/management/bulk-payment.html
@@ -1,6 +1,6 @@
 <div ng-controller="BulkPaymentController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Bulk Payment'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Bulk Payment'|translate}}</h4></div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="doImport()">
