--- a/app/client/report/commission-report.html
+++ b/app/client/report/commission-report.html
@@ -1,6 +1,6 @@
 <div ng-controller="CommissionReportController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Commission Report'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Commission Report'|translate}}</h4></div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="export()">
@@ -18,7 +18,7 @@
                                            datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
                                         <button type="button" class="btn btn-default"
-                                                ng-click="startDate.opened=true"><i class="glyphicon glyphicon-calendar"></i>
+                                                ng-click="startDate.opened=true"><img src="../../../images/icon-calender-sml.png" />
                                         </button>
                                     </span>
                                 </p>
@@ -37,7 +37,7 @@
                                            ng-model="searchParams.endDate" is-open="endDate.opened" required
                                            datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
+                                        <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                                     </span>
                                 </p>
                             </div>
