--- a/app/client/report/mt4-account-report.html
+++ b/app/client/report/mt4-account-report.html
@@ -1,6 +1,6 @@
 <div ng-controller="Mt4AccountReportController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'MT4 Account Report'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'MT4 Account Report'|translate}}</h4></div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="export()">
@@ -8,7 +8,7 @@
                     <div class="col-sm-12">
                         <label class="control-label" for="agent">{{"IB"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-12">
                         <select id="agent" name="agent" class="form-control" ng-model="searchParams.workGroup"
                                 ng-required="workGroups.length>10"
                                 ng-options="option.name for option in workGroups">
