--- a/app/user/admin/login/agent-login-admin.html
+++ b/app/user/admin/login/agent-login-admin.html
@@ -1,10 +1,12 @@
 <div ng-controller="AgentLoginProducerController">
-    <div ng-show="pageParams.totalItems>pageParams.itemsPerPage">
-        <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
-            items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
-            class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-            first-text="<<" last-text=">>" next-text=">" previous-text="<">
-        </ul>
+    <div class="pagi-wrap">
+        <div ng-show="pageParams.totalItems>pageParams.itemsPerPage">
+            <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
+                items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
+                class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
+                first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
+            </ul>
+        </div>
     </div>
 
     <table class="table table-striped table-hover table-responsive">
@@ -22,11 +24,13 @@
         </tbody>
     </table>
 
-    <div ng-show="pageParams.totalItems>pageParams.itemsPerPage">
-        <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
-            items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
-            class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-            first-text="<<" last-text=">>" next-text=">" previous-text="<">
-        </ul>
+    <div class="pagi-wrap">
+        <div ng-show="pageParams.totalItems>pageParams.itemsPerPage">
+            <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
+                items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
+                class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
+                first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
+            </ul>
+        </div>
     </div>
 </div>
