--- a/app/user/admin/login-admin.html
+++ b/app/user/admin/login-admin.html
@@ -1,7 +1,7 @@
 <div ng-controller="LoginAdminController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Login Admin"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Login Admin"|translate}}</h4>
         </div>
 
         <div class="panel-body">
