--- a/app/user/admin/exchange-rates.html
+++ b/app/user/admin/exchange-rates.html
@@ -1,6 +1,6 @@
 <div ng-controller="ExchangeRatesController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Exchange Rates'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Exchange Rates'|translate}}</h4></div>
         <div class="panel-body" ng-show="view.exchangeRates.length">
             <div class="row">
                 <div class="col-sm-12">
