--- a/app/user/admin/mt4-groups.html
+++ b/app/user/admin/mt4-groups.html
@@ -1,15 +1,17 @@
 <div ng-controller="Mt4GroupsController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'MT4 Groups'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'MT4 Groups'|translate}}</h4></div>
 
         <div class="panel-body">
             <div class="row">
-                <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
-                    <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
-                        items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
-                        class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
-                    </ul>
+                <div class="pagi-wrap">
+                    <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
+                        <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
+                            items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
+                            class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
+                            first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="col-sm-12">
@@ -31,12 +33,14 @@
                     </table>
                 </div>
 
-                <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
-                    <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
-                        items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
-                        class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
-                    </ul>
+                <div class="pagi-wrap">
+                    <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
+                        <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
+                            items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
+                            class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
+                            first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
