--- a/app/user/admin/symbol-volume-map.html
+++ b/app/user/admin/symbol-volume-map.html
@@ -1,8 +1,8 @@
 <div ng-controller="SymbolVolumeMapController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading" ng-if="entity.id">{{entity.symbol}}</strong>
-            <strong class="heading" ng-if="!entity.id">{{"New Symbol Definition"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading" ng-if="entity.id">{{entity.symbol}}</h4>
+            <h4 class="heading" ng-if="!entity.id">{{"New Symbol Definition"|translate}}</h4>
         </div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
@@ -10,7 +10,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="symbol">{{"Symbol"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <input id="symbol" name="symbol" class="form-control" ng-model="entity.symbol" required ng-trim="true"/>
                     </div>
                 </div>
@@ -19,7 +19,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="ratio">{{"Volume Ratio"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <input id="ratio" name="ratio" class="form-control" ng-model="entity.volumeRatio" float required ng-trim="true"/>
                     </div>
                 </div>
