--- a/app/user/admin/commission-definition-import.html
+++ b/app/user/admin/commission-definition-import.html
@@ -1,6 +1,6 @@
 <div ng-controller="CommissionDefinitionImportController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Commission Definition Import'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Commission Definition Import'|translate}}</h4></div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="doImport()">
