--- a/app/user/admin/commissions.html
+++ b/app/user/admin/commissions.html
@@ -1,7 +1,7 @@
 <div ng-controller="CommissionAdminListController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Commission Definitions"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Commission Definitions"|translate}}</h4>
         </div>
 
         <table class="table table-striped table-responsive">
