--- a/app/user/admin/exchange-rate.html
+++ b/app/user/admin/exchange-rate.html
@@ -1,8 +1,8 @@
 <div ng-controller="ExchangeRateController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading" ng-if="entity.id">{{entity.symbol}}</strong>
-            <strong class="heading" ng-if="!entity.id">{{"New Exchange Rate"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading" ng-if="entity.id">{{entity.symbol}}</h4>
+            <h4 class="heading" ng-if="!entity.id">{{"New Exchange Rate"|translate}}</h4>
         </div>
 
         <div class="panel-body">
@@ -11,14 +11,12 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="date">{{"Date"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <p class="input-group">
                             <input id="date" name="date" type="text" class="form-control" uib-datepicker-popup
                                    ng-model="entity.date" is-open="date.opened" datepicker-options="dateOptions" ng-required="true" />
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-default" ng-click="date.opened=true">
-                                    <i class="glyphicon glyphicon-calendar"></i>
-                                </button>
+                                <button type="button" class="btn btn-default" ng-click="date.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                             </span>
                         </p>
                     </div>
@@ -28,7 +26,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="symbol1">{{"Symbol 1"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <input id="symbol1" name="symbol1" class="form-control" ng-model="entity.symbol1" required ng-trim="true"/>
                     </div>
                 </div>
@@ -37,7 +35,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="symbol1">{{"Symbol 2"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <input id="symbol2" name="symbol2" class="form-control" ng-model="entity.symbol2" required ng-trim="true"/>
                     </div>
                 </div>
@@ -46,7 +44,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="rate">{{"Rate"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <input id="rate" name="rate" type="number" class="form-control" ng-model="entity.rate" required ng-trim="true"/>
                     </div>
                 </div>
