--- a/app/user/admin/scheduled-events.html
+++ b/app/user/admin/scheduled-events.html
@@ -1,6 +1,6 @@
 <div ng-controller="ScheduledEventsController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{"Scheduled Events"|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{"Scheduled Events"|translate}}</h4></div>
         <div class="panel-body">
             <div class="row col-sm-12">
                 <table class="table table-striped table-hover table-responsive">
