--- a/app/user/admin/symbol-volume-maps.html
+++ b/app/user/admin/symbol-volume-maps.html
@@ -1,6 +1,6 @@
 <div ng-controller="SymbolVolumeMapsController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Volume Definition'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Volume Definition'|translate}}</h4></div>
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
