--- a/app/user/admin/work-type.html
+++ b/app/user/admin/work-type.html
@@ -1,8 +1,8 @@
 <div ng-controller="WorkTypeController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading" ng-if="entity.id">{{entity.type}}</strong>
-            <strong class="heading" ng-if="!entity.id">{{"New Work Type"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading" ng-if="entity.id">{{entity.type}}</h4>
+            <h4 class="heading" ng-if="!entity.id">{{"New Work Type"|translate}}</h4>
         </div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
@@ -10,7 +10,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="name">{{"Type"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <input id="name" name="name" class="form-control" ng-model="entity.type" required ng-trim="true"/>
                     </div>
                 </div>
