--- a/app/client/client-summary.html
+++ b/app/client/client-summary.html
@@ -91,7 +91,7 @@
                         <th><a href="" ng-click="predicate='client.clientType'; reverse=!reverse">{{'Client Type'|translate}}</a></th>
                         <th><a href="" ng-click="predicate='client.clientStatus'; reverse=!reverse">{{'Status'|translate}}</a></th>
                         <th><a href="" ng-click="predicate='client.created'; reverse=!reverse">{{'Created'|translate}}</a></th>
-                        <th><a href="" ng-click="predicate='updated'; reverse=!reverse">{{'Updated'|translate}}</a></th>
+                        <th><a href="" ng-click="predicate='updated'; reverse=!reverse">{{'Last Update'|translate}}</a></th>
                         <th><a href="" ng-click="predicate='client.email'; reverse=!reverse">{{'Email'|translate}}</a></th>
                     </tr>
                     </thead>
