--- a/app/agent/homeScreen/summary.html
+++ b/app/agent/homeScreen/summary.html
@@ -5,7 +5,7 @@
         </div>
 
         <form novalidate role="form" name="editForm" ng-submit="refresh()">
-            <div class="row" ng-if="view.summaryList.length<=1">
+            <div class="row">
                 <div class="col-sm-4 date-bx">
                     <div class="date-icon-bx" ng-click="startDate.opened=true"><img src="../../../images/icon-calender.png" /></div>
                     <div class="date-input-bx"><div class="dib-txt">{{'Start Date'|translate}}</div><input name="startDate" type="text" uib-datepicker-popup ng-model="view.startDate" is-open="startDate.opened" datepicker-options="dateOptions" ng-required="true" /></div>
@@ -19,6 +19,9 @@
                         <img src="../../../images/icon-refresh.png" />
                     </button>
                 </div>
+            </div>
+
+            <div class="row" ng-if="view.summaryList.length<=1">
                 <div class="clearfix"></div>
                 <div ng-repeat="summary in view.summaryList">
                     <div class="col-sm-4 usd-bx-wrap">
@@ -111,35 +114,6 @@
             <div class="row" ng-if="view.summaryList.length && view.summaryList.length>1">
                 <div class="col-sm-12">
                     <table class="table table-striped table-responsive">
-                        <thead>
-                        <tr>
-                            <th class="col-sm-3">
-                                <p class="input-group">
-                                    <input name="startDate" type="text" class="form-control" uib-datepicker-popup
-                                           ng-model="view.startDate" is-open="startDate.opened" datepicker-options="dateOptions" ng-required="true" />
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default" ng-click="startDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
-                                    </span>
-                                </p>
-                            </th>
-                            <th class="col-sm-3">
-                                <p class="input-group">
-                                    <input name="endDate" type="text" class="form-control" uib-datepicker-popup
-                                           ng-model="view.endDate" is-open="endDate.opened" datepicker-options="dateOptions" ng-required="true" />
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
-                                    </span>
-                                </p>
-                            </th>
-                            <th class="col-sm-6">
-                                <p class="input-group">
-                                    <button class="btn btn-success" type="submit" ng-disabled="editForm.$invalid">
-                                        <span class="glyphicon glyphicon-repeat"></span>
-                                    </button>
-                                </p>
-                            </th>
-                        </tr>
-                        </thead>
                         <tbody>
                         <tr>
                             <th>{{'Currency'|translate}}</th>
