--- a/app/agent/management/ib-accounts.html
+++ b/app/agent/management/ib-accounts.html
@@ -23,6 +23,7 @@
                         </th>
                         <th><a href="" ng-click="predicate='login'; reverse=!reverse">{{'Login'|translate}}</a></th>
                         <th><a href="" ng-click="predicate='name'; reverse=!reverse">{{'Name'|translate}}</a></th>
+                        <th>{{'Created'|translate}}</th>
                         <th>{{'Phone'|translate}}</th>
                         <th colspan="2">{{'Email'|translate}}</th>
                         <th>{{'Category'|translate}}</th>
@@ -37,6 +38,7 @@
                         </td>
                         <td>{{account.account.login}}</td>
                         <td>{{account.name}}</td>
+                        <td>{{account.account.regDate|formattedDate}}</td>
                         <td>{{account.phone}}</td>
                         <td colspan="2">{{account.email}}</td>
                         <td>{{account.category}}</td>
@@ -48,20 +50,20 @@
                     <tr ng-if="account.expand">
                         <th colspan="2"></th>
                         <th>{{'Country'|translate}}</th>
-                        <th>{{'State/Province'|translate}}</th>
+                        <th colspan="2">{{'State/Province'|translate}}</th>
                         <th>{{'City'|translate}}</th>
                         <th colspan="3"></th>
                     </tr>
                     <tr ng-if="account.expand">
                         <td colspan="2"></td>
                         <td>{{account.account.country}}</td>
-                        <td>{{account.account.state}}</td>
+                        <td colspan="2">{{account.account.state}}</td>
                         <td>{{account.account.city}}</td>
                         <td colspan="3"></td>
                     </tr>
                     <tr ng-if="account.expand && account.workGroup.notes">
                         <td></td>
-                        <td colspan="7">
+                        <td colspan="8">
                             <pre class="pre-text">{{account.workGroup.notes}}</pre>
                         </td>
                     </tr>
@@ -69,6 +71,7 @@
                         <td></td>
                         <td>{{ac.account.login}} [{{'Level'|translate}}: {{ac.level}}]</td>
                         <td>{{ac.name}}</td>
+                        <td>{{ac.account.regDate|formattedDate}}</td>
                         <td>{{ac.phone}}</td>
                         <td colspan="2">{{ac.email}}</td>
                         <td>{{ac.category}}</td>
@@ -80,20 +83,20 @@
                     <tr ng-if="account.expand && account.allSubAccounts && account.allSubAccounts.length && ac.level<2">
                         <th colspan="2"></th>
                         <th>{{'Country'|translate}}</th>
-                        <th>{{'State/Province'|translate}}</th>
+                        <th colspan="2">{{'State/Province'|translate}}</th>
                         <th>{{'City'|translate}}</th>
                         <th colspan="3"></th>
                     </tr>
                     <tr ng-if="account.expand && account.allSubAccounts && account.allSubAccounts.length && ac.level<2">
                         <td colspan="2"></td>
                         <td>{{ac.account.country}}</td>
-                        <td>{{ac.account.state}}</td>
+                        <td colspan="2">{{ac.account.state}}</td>
                         <td>{{ac.account.city}}</td>
                         <td colspan="3"></td>
                     </tr>
                     <tr ng-if="account.expand && account.workGroup.notes">
                         <td></td>
-                        <td colspan="7">
+                        <td colspan="8">
                             <pre class="pre-text">{{account.workGroup.notes}}</pre>
                         </td>
                     </tr>
